--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -4,6 +4,12 @@
   xmlns="sap.m"
   xmlns:mvc="sap.ui.core.mvc">
   <Button
-      text="Say Hello"
-      press=".onShowHello"/>
+    text="Say Hello"
+    press=".onShowHello"/>
+  <!-- declare the path in {...} to bind the mode's value  -->
+  <Input
+    value="{/recipient/name}"
+    description="Hello {/recipient/name}"
+    valueLiveUpdate="true"
+    width="60%"/>
 </mvc:View>
