--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -3,8 +3,9 @@
   controllerName="sap.ui.demo.walkthrough.controller.App"
   xmlns="sap.m"
   xmlns:mvc="sap.ui.core.mvc">
+  <!-- XML view button text data binding to showHelloButtonText -->
   <Button
-    text="Say Hello"
+    text="{i18n>showHelloButtonText}"
     press=".onShowHello"/>
   <!-- declare the path in {...} to bind the mode's value  -->
   <Input
