feat: add SAPUI5 standard class for margin/padding

--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -6,14 +6,15 @@
   <Shell>
     <App>
       <pages>
-        <Page title="{i18n>homePageTitle}">
+        <Page title="{i18n>homePageTitle}" class="sapUiResponsiveMargin" width="auto">
           <content>
             <Panel headerText="{i18n>helloPanelTitle}">
               <content>
                 <!-- XML view button text data binding to showHelloButtonText -->
-                <Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
+                <Button text="{i18n>showHelloButtonText}" press=".onShowHello" class="sapUiSmallMarginEnd"/>
                 <!-- declare the path in {...} to bind the mode's value  -->
                 <Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
+                <Text text="Hello {/recipient/name}" class="sapUiSmallMargin"/>
               </content>
             </Panel>
           </content>
