--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -4,17 +4,17 @@
   xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
   <!-- <Shell> control as container takes care of visual adaptation of the application to the device’s screen size  -->
   <Shell>
-    <App>
+    <App class="myAppDemoWT">
       <pages>
         <Page title="{i18n>homePageTitle}" class="sapUiResponsiveMargin" width="auto">
           <content>
             <Panel headerText="{i18n>helloPanelTitle}">
               <content>
                 <!-- XML view button text data binding to showHelloButtonText -->
-                <Button text="{i18n>showHelloButtonText}" press=".onShowHello" class="sapUiSmallMarginEnd"/>
+                <Button text="{i18n>showHelloButtonText}" press=".onShowHello" class="myCustomButton"/>
                 <!-- declare the path in {...} to bind the mode's value  -->
                 <Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
-                <Text text="Hello {/recipient/name}" class="sapUiSmallMargin"/>
+                <FormattedText htmlText="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
               </content>
             </Panel>
           </content>
