feat: revise reusable fragment in Component.js

--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -6,14 +6,13 @@
   <Shell>
     <App class="myAppDemoWT">
       <pages>
-        <Page title="{i18n>homePageTitle}" class="sapUiResponsiveMargin" width="auto">
+        <Page title="{i18n>homePageTitle}">
+          <headerContent>
+            <Button icon="sap-icon://hello-world" press=".onOpenDialog"/>
+          </headerContent>
           <content>
-            <Panel headerText="{i18n>helloPanelTitle}">
-              <content>
-                <!-- XMLView tag refer to a new view -->
-                <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel"/>
-              </content>
-            </Panel>
+            <!-- XMLView tag refer to a new view -->
+            <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel"/>
           </content>
         </Page>
       </pages>
