--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -13,6 +13,7 @@
           <content>
             <!-- XMLView tag refer to a new view -->
             <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel"/>
+            <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.InvoiceList"/>
           </content>
         </Page>
       </pages>
