--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -1,6 +1,7 @@
 <mvc:View
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
+	controllerName="sap.ui.demo.walkthrough.controller.InvoiceList"
 >
 	<!-- aggregation binding to root path "Invoices" of JSON data -->
 	<!-- Since JSON model defined as "invoice" in manifest, each binding definition have to be prefixed with the idientifier "invoice>" -->
@@ -11,7 +12,29 @@
 		items="{invoice>/Invoices}"
 	>
 		<items>
-			<ObjectListItem title="{invoice>Quantity} x {invoice>ProductName}"/>
+			<ObjectListItem
+				title="{invoice>Quantity} x {invoice>ProductName}"
+				number="{
+			parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
+			type: 'sap.ui.model.type.Currency',
+			formatOptions: {
+				showMeasure: false
+			}
+		}"
+				numberUnit="{view>/currency}"
+			/>
+      <!-- add number & numberUnit attributs and apply the currency data type by setting the type attribute -->
+			<ObjectListItem
+				title="{invoice>Quantity} x {invoice>ProductName}"
+				number="{
+			parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
+			type: 'sap.ui.model.type.Currency',
+			formatOptions: {
+				showMeasure: false
+			}
+		}"
+				numberUnit="{view>/currency}"
+			/>
 		</items>
 	</List>
 </mvc:View>
