--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -24,19 +24,26 @@
 				numberUnit="{view>/currency}"
 			/>
 			<!-- add number & numberUnit attributs and apply the currency data type by setting the type attribute -->
-      <!-- format number state with a expression binding syntax: starts with "=" inside the brackets and do simple calculation logic -->
+			<!-- format number state with a expression binding syntax: starts with "=" inside the brackets and do simple calculation logic -->
 			<ObjectListItem
 				title="{invoice>Quantity} x {invoice>ProductName}"
 				number="{
-			parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
-			type: 'sap.ui.model.type.Currency',
-			formatOptions: {
-				showMeasure: false
-			}
-		}"
+		    	parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
+			    type: 'sap.ui.model.type.Currency',
+			    formatOptions: {
+				  showMeasure: false
+		    	}
+		    }"
 				numberUnit="{view>/currency}"
 				numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"
-			/>
+			>
+				<firstStatus>
+					<ObjectStatus text="{
+						path: 'invoice>Status',
+						formatter: '.formatter.statusText'
+					}"/>
+				</firstStatus>
+			</ObjectListItem>
 		</items>
 	</List>
 </mvc:View>
