--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -5,12 +5,25 @@
 >
 	<!-- aggregation binding to root path "Invoices" of JSON data -->
 	<!-- Since JSON model defined as "invoice" in manifest, each binding definition have to be prefixed with the idientifier "invoice>" -->
+	<!-- spceify id for the List to identify the list from event handler "onFilterInvoices"  -->
 	<List
+		id="invoiceList"
 		headerText="{i18n>invoiceListTitle}"
 		class="sapUiResponsiveMargin"
 		width="auto"
 		items="{invoice>/Invoices}"
 	>
+		<!-- Toolbar is more flexible and adjustable   -->
+		<headerToolbar>
+			<Toolbar>
+				<Title text="{i18n>invoiceListTitle}"/>
+				<ToolbarSpacer/>
+				<SearchField
+					width="50%"
+					search=".onFilterInvoices"
+				/>
+			</Toolbar>
+		</headerToolbar>
 		<items>
 			<ObjectListItem
 				title="{invoice>Quantity} x {invoice>ProductName}"
