--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -48,14 +48,16 @@
 			<ObjectListItem
 				title="{invoice>Quantity} x {invoice>ProductName}"
 				number="{
-		    	parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
-			    type: 'sap.ui.model.type.Currency',
-			    formatOptions: {
-				  showMeasure: false
-		    	}
-		    }"
+					parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
+					type: 'sap.ui.model.type.Currency',
+					formatOptions: {
+					showMeasure: false
+					}
+				}"
 				numberUnit="{view>/currency}"
 				numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"
+				type="Navigation"
+				press="onPress"
 			>
 				<firstStatus>
 					<ObjectStatus text="{
