--- a/view/Detail.view.xml
+++ b/view/Detail.view.xml
@@ -3,7 +3,12 @@
 	xmlns:mvc="sap.ui.core.mvc"
 	controllerName="sap.ui.demo.walkthrough.controller.Detail"
 >
-	<Page title="{i18n>detailPageTitle}">
+	<!-- add routing back -->
+	<Page
+		title="{i18n>detailPageTitle}"
+		showNavButton="true"
+		navButtonPress=".onNavBack"
+	>
 		<!-- bind some properties of the <objectHearer> to the "invoice" model -->
 		<ObjectHeader
 			intro="{invoice>ShipperName}"
