--- a/view/Detail.view.xml
+++ b/view/Detail.view.xml
@@ -2,6 +2,7 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 	controllerName="sap.ui.demo.walkthrough.controller.Detail"
+	xmlns:wt="sap.ui.demo.walkthrough.control"
 >
 	<!-- add routing back -->
 	<Page
@@ -13,6 +14,11 @@
 		<ObjectHeader
 			intro="{invoice>ShipperName}"
 			title="{invoice>ProductName}"
+		/>
+		<wt:ProductRating
+			id="rating"
+			class="sapUiSmallMarginBeginEnd"
+			change=".onRatingChange"
 		/>
 	</Page>
 </mvc:View>
