--- a/view/HelloPanel.view.xml
+++ b/view/HelloPanel.view.xml
@@ -3,10 +3,15 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 >
+	<!-- expandable property is bound to a "device" model, path: /system/phone, which means panel can be expanded on phone device only -->
+	<!-- Refer "device" model with sap.ui.Device API of SAPUI5 to detect various device-specific settings -->
+	<!-- expanded property with expression binding syntax controls the state of the panel, depends on device type   -->
 	<Panel
 		headerText="{i18n>helloPanelTitle}"
 		class="sapUiResponsiveMargin"
 		width="auto"
+		expandable="{device>/system/phone}"
+		expanded="{= !${device>/system/phone} }"
 	>
 		<content>
 			<!-- button press to open fragment -->
@@ -14,7 +19,7 @@
 				id="helloDialogButton"
 				text="{i18n>openDialogButtonText}"
 				press=".onOpenDialog"
-				class="sapUiSmallMarginEnd"
+				class="sapUiSmallMarginEnd sapUiVisibleOnlyOnDesktop"
 				icon="sap-icon://world"
 			/>
 			<Button
